// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should match snapshot and styles for default props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 10px;
}

.c1 {
  width: 100%;
}

<Component
  type="text"
>
  <styled.div>
    <div
      className="c0"
    >
      <styled.input
        type="text"
      >
        <input
          className="c1"
          type="text"
        />
      </styled.input>
    </div>
  </styled.div>
</Component>
`;

exports[`Input should match snapshot with label 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 10px;
}

.c1 {
  margin-right: 10px;
  font-weight: bold;
  width: 120px;
}

.c2 {
  width: 100%;
}

<Component
  id="test"
  label="Name"
  type="text"
>
  <styled.div>
    <div
      className="c0"
    >
      <styled.label
        htmlFor="test"
      >
        <label
          className="c1"
          htmlFor="test"
        >
          Name
          :
        </label>
      </styled.label>
      <styled.input
        id="test"
        type="text"
      >
        <input
          className="c2"
          id="test"
          type="text"
        />
      </styled.input>
    </div>
  </styled.div>
</Component>
`;
